--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,7 @@
 AIRSTACK_API_KEY=""
+
+# !!! remove "_app" from the WorldCoin App ID before setting !!!
 NEXT_PUBLIC_WLD_APP_ID=""
+
 NEXT_PUBLIC_WC_ACTION=""
-WALLETCONNECT_PROJECT_ID=""
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=""
