--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,12 @@
+# Airstack API Key
 AIRSTACK_API_KEY=""
-NEXT_PUBLIC_WC_ACTION=""
+
+# WalletConnect Project ID
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=""
 
-# !!! remove "_app" from the WorldCoin App ID before setting !!!
+# WorldCoin ID Action Name
+NEXT_PUBLIC_WC_ACTION=""
+
+# Worldcoin ID App Name
+# Remove "_app" from the WorldCoin App ID before setting
 NEXT_PUBLIC_WLD_APP_ID=""
